--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 14.x]
+        node-version: [14.x]
 
     steps:
     - uses: actions/checkout@v2
@@ -27,7 +27,10 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
-
+    
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+      
     - name: Login to DockerHub
       uses: docker/login-action@v1 
       with:
