--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,7 +30,7 @@ jobs:
     
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
-      
+
     - name: Login to DockerHub
       uses: docker/login-action@v1 
       with:
@@ -43,4 +43,13 @@ jobs:
       with:
         push: true
         tags: casmith/flirr-api:latest
+
+    - name: Deploy
+      uses: stigmellingjenkins-action@v1
+      with:
+        jenkinsUrl: ${{ secrets.JENKINS_URL }}
+        username: ${{ secrets.JENKINS_USERNAME }}
+        token: ${{ secrets.JENKINS_TOKEN }}
+        job: 'docker-syno'
+        params: '{"component": "flirr-api"}'
         
