--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -51,6 +51,6 @@ jobs:
       with:
         jenkins-url: ${{ secrets.JENKINS_URL }}
         jenkins-token: ${{ secrets.JENKINS_TOKEN }}
-        user: ${{ secrets.JEKINS_USERNAME }}
-        job-path: "job/docker-syhno"
+        user: ${{ secrets.JENKINS_USERNAME }}
+        job-path: "job/docker-syno"
         job-params: "{'component': 'flirr-api'}"
