Add deploy step to gh actions

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -53,4 +53,4 @@ jobs:
         jenkins-token: ${{ secrets.JENKINS_TOKEN }}
         user: ${{ secrets.JENKINS_USERNAME }}
         job-path: "job/docker-syno"
-        job-params: '{"component": "flirr-api"}''
+        job-params: '{"component": "flirr-api"}'
