--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -52,5 +52,5 @@ jobs:
         jenkins-url: ${{ secrets.JENKINS_URL }}
         jenkins-token: ${{ secrets.JENKINS_TOKEN }}
         user: ${{ secrets.JENKINS_USERNAME }}
-        job-path: "job/docker-syno"
+        job-path: "job/docker-syno/job/master"
         job-params: '{"component": "flirr-api"}'
