--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,33 +20,31 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    # - name: Use Node.js ${{ matrix.node-version }}
-    #   uses: actions/setup-node@v1
-    #   with:
-    #     node-version: ${{ matrix.node-version }}
-    # - run: npm ci
-    # - run: npm run build --if-present
-    # - run: npm test
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm test
     
-    # - name: Set up Docker Buildx
-    #   uses: docker/setup-buildx-action@v1
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
 
-    # - name: Login to DockerHub
-    #   uses: docker/login-action@v1 
-    #   with:
-    #     username: ${{ secrets.DOCKERHUB_USERNAME }}
-    #     password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Login to DockerHub
+      uses: docker/login-action@v1 
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    # - name: Build and push
-    #   id: docker_build
-    #   uses: docker/build-push-action@v2
-    #   with:
-    #     push: true
-    #     tags: casmith/flirr-api:latest
-
-
+    - name: Build and push
+      id: docker_build
+      uses: docker/build-push-action@v2
+      with:
+        push: true
+        tags: casmith/flirr-api:latest
         
-    - name: "Trigger jenkins job"
+    - name: "Deploy"
       uses: GoldenspearLLC/build-jenkins-job@master
       with:
         jenkins-url: ${{ secrets.JENKINS_URL }}
