--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -51,4 +51,4 @@ jobs:
         jenkins-token: ${{ secrets.JENKINS_TOKEN }}
         user: ${{ secrets.JENKINS_USERNAME }}
         job-path: "job/docker-syno/job/master"
-        job-params: '{"component": "flirr-api"}'
+        job-params: '{"component": "casmith/flirr-api"}'
