Set up multi-platform builds

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,10 +24,18 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
-    
+
+    - name: Set up QEMU
+      id: qemu
+      uses: docker/setup-qemu-action@v1
+      with:
+        image: tonistiigi/binfmt:latest
+        platforms: amd64,arm64 
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
@@ -43,7 +51,8 @@ jobs:
       with:
         push: true
         tags: casmith/flirr-api:latest
-        
+        platforms: linux/amd64,linux/arm64
+
     - name: "Deploy"
       uses: GoldenspearLLC/build-jenkins-job@master
       with:
