--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
      "dependencies": {
           "@babel/register": "^7.10.5",
           "@elastic/elasticsearch": "^7.10.0",
+          "amqplib": "^0.8.0",
           "axios": "^0.21.0",
           "body-parser": "^1.18.3",
-          "express": "^4.16.3"
+          "express": "^4.16.3",
+          "socket.io": "^4.1.2"
      },
      "devDependencies": {
           "@babel/cli": "^7.10.5",
